# chsat

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  api_test.rhai
configs/: .gitignore  config.toml  settings.toml  windows.toml
src/: cli.rs  config.rs  config_toml.rs  main.rs  runner.rs  utils.rs
src/data/: get.rs  mod.rs  ser.rs  windows_util.rs
src/data/unix/: user_info.rs
src/data/windows/: mod.rs  sys_info.rs  user_info.rs
src/runner/: config.rs  frontend.rs  mod.rs  validate.rs
src/settings/: config.rs  init.rs  mod.rs
