[package]
name = "chsat"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
clap = { version = "4.5.53", features = ["derive", "string"] }
dialoguer = "0.12.0"
duct = "1.1.1"
indexmap = { version = "2.12.1", features = ["serde"] }
owo-colors = "4.2.3"
rhai = { version = "1.24.0", features = [
    "std",
    "internals",
    "sync",
    "no_custom_syntax",
] }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.1"
toml = { version = "0.9.8", features = ["preserve_order"] }
which = "8.0.0"
directories = "6.0.0"
sys-info = "0.9.1"
serde_json = "1.0.149"
thiserror = "2.0.18"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

[target."cfg(unix)".dependencies]
uzers = "0.12.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
